[gd_scene load_steps=4 format=2]

[ext_resource path="res://src/scripts/LadderTop.gd" type="Script" id=1]

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 4, 4 )

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 16, 3 )

[node name="LadderTrap" type="Node2D"]
script = ExtResource( 1 )

[node name="IsPlayerAbove" type="Area2D" parent="."]
collision_layer = 0

[node name="CollisionShape2D" type="CollisionShape2D" parent="IsPlayerAbove"]
position = Vector2( 0, -8 )
shape = SubResource( 2 )

[node name="LadderTop" type="StaticBody2D" parent="."]
collision_layer = 2
collision_mask = 0

[node name="CollisionShape2D" type="CollisionShape2D" parent="LadderTop"]
shape = SubResource( 1 )
one_way_collision = true

[connection signal="body_entered" from="IsPlayerAbove" to="." method="_on_IsPlayerAbove_body_entered"]
[connection signal="body_exited" from="IsPlayerAbove" to="." method="_on_IsPlayerAbove_body_exited"]
